<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>app.com</groupId>
    <artifactId>HotelReservationSystem</artifactId>
    <version>${revision}</version>

    <properties>
        <revision>1.0.1</revision>
        <java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>18</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>18</version>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>2.1.210</version>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <release>${maven.compiler.target}</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.4</version>
                <configuration>
                    <mainClass>com.app.App</mainClass>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <id>Creating installer</id>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <phase>package</phase>
                        <configuration>
                            <executable>jpackage</executable>
                            <arguments>
                                <argument>--input</argument>
                                <argument>target/</argument>

                                <argument>--name</argument>
                                <argument>HotelReservation</argument>

                                <argument>--main-jar</argument>
                                <argument>HotelReservationSystem-1.0.0.jar</argument>

                                <argument>--main-class</argument>
                                <argument>com.app.App</argument>

                                <argument>--type</argument>
                                <argument>msi</argument>

                                <argument>--win-dir-chooser</argument>
                                <argument>--verbose</argument>

                                <argument>--module-path</argument>
                                <argument>F:/#Work/javafx-jmods-17.0.2</argument>

                                <argument>--add-modules</argument>
                                <argument>
                                    java.base,javafx.controls,javafx.web,javafx.graphics,javafx.media,java.desktop,javafx.fxml,jdk.charsets
                                </argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>